--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
-
-    <h2>Lorem, ipsum.</h2>
-
-
+    <div id="root"></div>
 </body>
 </html>
